--- a/index.css
+++ b/index.css
@@ -8,12 +8,12 @@
 }
 
 #nav-menu {
-  overflow: hidden;
+  /* overflow: hidden;
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 30px;
-  box-shadow: rgba(183, 128, 128, 0.4) 0px 30px 90px;
+  padding: 30px; */
+  /* background-color: rgb(157, 156, 156); */
 }
 #nav-menu a:hover {
   color: #00aff0;
@@ -25,6 +25,11 @@
   border-bottom-style: solid;
   border-bottom-color: #ededed;
   border-bottom-width: 1px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 30px;
 }
 
 #nav-menu a {
@@ -34,6 +39,46 @@
   text-align: center;
   text-decoration: none;
   font-size: 20px;
+}
+
+#resume-link-2 {
+  align-items: center;
+  background: #ffffff;
+  border: 0 solid #e2e8f0;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  color: #1a202c;
+  display: inline-flex;
+  font-size: 1.1rem;
+  font-weight: 600;
+  height: 53px;
+  justify-content: center;
+  line-height: 22px;
+  /* overflow-wrap: break-word; */
+  padding: 28px;
+  text-decoration: none;
+  width: auto;
+  letter-spacing: 1px;
+  border-radius: 8px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
+}
+
+#resume-link-2:hover {
+  color: whitesmoke;
+  background-color: #00aff0;
+  cursor: pointer;
+}
+.fa-solid {
+  margin-left: 10px;
+  font-size: 1.1rem;
 }
 
 /* home-section css */
@@ -76,6 +121,50 @@
   height: 100%;
   overflow: hidden;
 }
+/* about section */
+#about {
+  text-align: center;
+  line-height: 1.9;
+}
+#about h1 {
+  font-size: 45px;
+  color: #bbb;
+}
 
 .img-container {
+  display: inline-block;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+}
+.img-container > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.my-story {
+  width: 70%;
+  margin: auto;
+  text-align-last: center;
+}
+
+/* skills section */
+#skills > h1 {
+  text-align: center;
+  font-size: 45px;
+  color: #bbb;
+}
+.skills-container {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  border: 1px solid red;
+  grid-template-columns: auto auto auto;
+}
+
+.skills-card {
+  border: 1px solid blue;
+  text-align: center;
 }
