--- a/index.css
+++ b/index.css
@@ -144,6 +144,7 @@
 
 .psection{
   margin-top: 45px;
+  text-align: center;
 }
 
 
@@ -255,4 +256,9 @@ margin-top: 50px;
 .calendar{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
   rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+#git-statistics >img{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+  rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
 }
