--- a/index.css
+++ b/index.css
@@ -265,11 +265,12 @@ margin-top: 50px;
 #git-statistics img{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
   rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  padding: 5px;
+  /* padding: 5px; */
+  /* margin: 5px; */
+}
+#top-lang-container{
+   text-align: center;
 }
 
-#git-statistics img:hover{
-  transform: scale(1.05);
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-  rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
-}
+
+
