--- a/index.css
+++ b/index.css
@@ -7,14 +7,17 @@
   font-family: "Lumanosimo", cursive;
 }
 
-#nav-menu {
-  /* overflow: hidden;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 30px; */
-  /* background-color: rgb(157, 156, 156); */
+
+
+.blue{
+  position:fixed;
+  top:0;
+  background:blue;
+  width:100%;
+  height:50px;
 }
+
+
 
 #nav-menu a:hover {
   color: #00aff0;
@@ -23,9 +26,9 @@
   display: flex;
   justify-content: flex-end;
   gap: 30px;
-  border-bottom-style: solid;
+  /* border-bottom-style: solid;
   border-bottom-color: #ededed;
-  border-bottom-width: 1px;
+  border-bottom-width: 1px; */
   overflow: hidden;
   position: fixed;
   top: 0;
@@ -96,7 +99,7 @@
 
 .title h1 {
   position: relative;
-  color: #bbb;
+  color: #00aff0;;
   font-weight: 600;
   font-size: 70px;
   padding: 0;
@@ -111,7 +114,7 @@
   padding: 0;
   margin: 0;
   line-height: 3;
-  color: #eeeeee;
+  color: #00aff0;;
   letter-spacing: 2px;
   text-shadow: 0 0 30рх #000155;
 }
@@ -172,16 +175,7 @@
   text-align-last: center;
 }
 
-/* skills section */
-/* #skill-container{
-  margin-top: 40px;
-} */
-/* #skill-container > h1 {
-  text-align: center;
-  font-size: 45px;
-  color: #00A4BD;
-  
-} */
+
 #skills {
   width: 80%;
   display: grid;
