--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
   body {
       margin: 0px;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     
+
   }
 
   .navbar {
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-radius: 20px;
+      /* border-radius: 20px; */
       box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
       position: sticky;
       top: 0px;
@@ -486,18 +486,19 @@
       text-align: center;
       flex-direction: column;
       align-items: center;
-      
+
   }
 
   .contact-details p {
       margin: 10px 0;
       font-size: 1.2rem;
       color: #1A237E;
-    
+
   }
+
   .contact-details-container {
-     text-align: justify;
-     
+      text-align: justify;
+
   }
 
   .contact-details a {
@@ -574,6 +575,7 @@
           width: 100%;
       }
 
+      
       #home {
           display: flex;
           flex-direction: column;
@@ -866,8 +868,8 @@
           margin: auto;
       }
 
-      .project-img {
-          width: 300px;
+      .project-img>div {
+          width: fit-content;
       }
 
       .project-img>img {
